--- a/tsconfig.json
+++ b/tsconfig.json
@@ -14,6 +14,6 @@
     ".expo/types/**/*.ts",
     "expo-env.d.ts",
     "nativewind-env.d.ts",
-    "types.d.ts"
+    "types/assets-types.d.ts"
   ]
 }
